--- a/VRChat/78/1298178.html
+++ b/VRChat/78/1298178.html
@@ -6,7 +6,7 @@
       VR用メガネフレーム - らぼてん - BOOTH
     </title>
     <meta name="description" content=
-    "[2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/ おそらく現在世界で最も安く、VRゴーグルにマウント可能なメガネの作成方法を提供します。なんとそのお値段はレンズ込みで最安2000円程度(レンズはペアで1300～1600円)！ 現在、VIVE、Oculus Rift、Oculus Quest、Valve Indexに対応しています。 VIVEではメガネユーザはディスプレイ間距離を離せば既存のメガネが入るのですが、視野角がスマホVR並みになります。">
+    "[2020/01/15] Oculus Quest用もDMM.makeで注文できるようになりました！ https://make.dmm.com/item/1138298/ [2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/ おそらく現在世界で最も安く、VRゴーグルにマウント可能なメガネの作成方法を提供します。なんとそのお値段はレンズ込みで最安2000円程度(レンズはペアで1300～1600円)！ 現在、VIVE、Oculus Rift、Oculus">
     <meta name="keywords" content=
     "booth, ブース, pixiv, ピクシブ, イラスト, マンガ, 創作, オンラインストア, オンラインショップ, ネットショップ, ec, ネット通販">
     <link rel="canonical" href="https://booth.pm/ja/items/1298178">
@@ -14,13 +14,13 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="VR用メガネフレーム - らぼてん - BOOTH">
     <meta name="twitter:description" content=
-    "[2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/ おそらく現在世界で最も安く、VRゴーグルにマウント可能なメガネの作成方法を提供します。なんとそのお値段はレンズ込みで最安2000円程度(レンズはペアで1300～1600円)！ 現在、VIVE、Oculus Rift、Oculus Quest、Valve Indexに対応しています。 VIVEではメガネユーザはディスプレイ間距離を離せば既存のメガネが入るのですが、視野角がスマホVR並みになります。">
+    "[2020/01/15] Oculus Quest用もDMM.makeで注文できるようになりました！ https://make.dmm.com/item/1138298/ [2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/ おそらく現在世界で最も安く、VRゴーグルにマウント可能なメガネの作成方法を提供します。なんとそのお値段はレンズ込みで最安2000円程度(レンズはペアで1300～1600円)！ 現在、VIVE、Oculus Rift、Oculus">
     <meta name="twitter:image" content=
     "https://booth.pximg.net/c/620x620/d6025b1a-065f-421b-b27c-b58fab3f570e/i/1298178/2b0284b9-2575-4d56-9db4-78a444bf0467_base_resized.jpg">
     <meta property="og:type" content="product">
     <meta property="og:title" content="VR用メガネフレーム - らぼてん - BOOTH">
     <meta property="og:description" content=
-    "[2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/ おそらく現在世界で最も安く、VRゴーグルにマウント可能なメガネの作成方法を提供します。なんとそのお値段はレンズ込みで最安2000円程度(レンズはペアで1300～1600円)！ 現在、VIVE、Oculus Rift、Oculus Quest、Valve Indexに対応しています。 VIVEではメガネユーザはディスプレイ間距離を離せば既存のメガネが入るのですが、視野角がスマホVR並みになります。">
+    "[2020/01/15] Oculus Quest用もDMM.makeで注文できるようになりました！ https://make.dmm.com/item/1138298/ [2019/12/27] Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。 https://make.dmm.com/item/1137420/ おそらく現在世界で最も安く、VRゴーグルにマウント可能なメガネの作成方法を提供します。なんとそのお値段はレンズ込みで最安2000円程度(レンズはペアで1300～1600円)！ 現在、VIVE、Oculus Rift、Oculus">
     <meta property="og:image" content=
     "https://booth.pximg.net/c/620x620/d6025b1a-065f-421b-b27c-b58fab3f570e/i/1298178/2b0284b9-2575-4d56-9db4-78a444bf0467_base_resized.jpg">
     <meta property="og:url" content=
@@ -75,9 +75,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "tenteeeee" data-product-category="127" data-product-id=
-        "1298178" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="tenteeeee" data-product-category="127"
+        data-product-id="1298178" data-product-list="market_show"
         data-product-price="100" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -101,17 +101,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -122,13 +122,13 @@
                             <img alt="らぼてん" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/4670155/icon_image/8cb7983b-9797-4596-8e18-3c924251a979_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               らぼてん
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           VR用メガネフレーム
                         </h2>
                         <div class="item-summary__caption">
@@ -444,7 +444,8 @@
                                 "lo-grid u-align-items-center">
                                   <div class="lo-grid-cell">
                                     <div class="variation-name">
-                                      Oculus Quest用3Dプリントを頼む
+                                      Oculus
+                                      Quest用(DMM.makeから発注ください)
                                     </div>
                                     <div class=
                                     "variation-caption u-text-assertive">
@@ -496,17 +497,15 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1298178"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text="VR用メガネフレーム | らぼてん"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1298178"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text="VR用メガネフレーム | らぼてん" data-count=
+                          "none" class="twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1298178"
@@ -516,7 +515,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -714,8 +713,11 @@
                       </div>
                       <section>
                         <div class=
-                        "market-item-detail-description">
-                          <p class="autolink">
+                        "js-market-item-detail-description">
+                          <p class="autolink u-text-wrap">
+                            [2020/01/15] Oculus
+                            Quest用もDMM.makeで注文できるようになりました！
+                            https://make.dmm.com/item/1138298/
                             [2019/12/27]
                             Indexの希望者が多いのでDMM.makeで作れるようにしました。以下のリンクからご注文ください。
                             https://make.dmm.com/item/1137420/
@@ -736,8 +738,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
