--- a/VRChat/71/1294471.html
+++ b/VRChat/71/1294471.html
@@ -77,9 +77,9 @@
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <div class="page-wrap">
       <main role="main">
-        <div class="market-item-detail" data-product-brand=
-        "sigma-vrc" data-product-category="33" data-product-id=
-        "1294471" data-product-list="market_show"
+        <div class="market-item-detail u-bg-white"
+        data-product-brand="sigma-vrc" data-product-category="33"
+        data-product-id="1294471" data-product-list="market_show"
         data-product-price="100" data-tracking="detail_item">
           <nav>
             <div class="breadcrumbs u-border-b u-border-100">
@@ -102,17 +102,17 @@
             </div>
           </nav>
           <article>
-            <div class="market-item-detail-article">
+            <div class=
+            "market-item-detail-article u-d-flex u-flex-column u-align-items-center u-pb-600 u-bg-white">
               <div class=
               "market-item-detail__exhibition-banner container">
               </div>
-              <div class="market-item-detail-article__body">
+              <div class="u-bg-white u-pt-600 u-px-700">
                 <div class="container">
-                  <div class="lo-grid">
-                    <div class="flex-order-summary">
+                  <div class="u-d-flex">
+                    <div class="u-order-1 l-col-2of5 u-pl-600">
                       <header>
-                        <div class=
-                        "flex-order-summary-shop_name-field">
+                        <div class="u-my-200 u-tpg-title3">
                           <a class="nav" target="_blank"
                           data-product-list=
                           "from market_show via market_item_detail to shop_index"
@@ -123,13 +123,13 @@
                             <img alt="SIGMAΣSTORE" class=
                             "user-avatar at-item-summary" src=
                             "https://booth.pximg.net/c/48x48/users/660384/icon_image/344a182b-9e5f-4612-9196-b674be429a02_base_resized.jpg">
-                            <div class=
-                            "flex-order-summary-shop_name">
+                            <div class="u-text-ellipsis">
                               SIGMAΣSTORE
                             </div>
                           </div></a>
                         </div>
-                        <h2 class="item-summary__item-name">
+                        <h2 class=
+                        "u-text-wrap u-tpg-title1 u-mt-0 u-mb-400">
                           【無料配布】1st EP [Mandara]
                         </h2>
                         <div class="item-summary__caption"></div>
@@ -348,18 +348,17 @@
                         </ul>
                       </section>
                       <section>
-                        <div class="share-btns">
-                          <div class="social-btn twitter">
-                            <a data-url=
-                            "https://booth.pm/ja/items/1294471"
-                            data-lang="ja" data-hashtags="booth_pm"
-                            data-text=
-                            "【無料配布】1st EP [Mandara] | SIGMAΣSTORE"
-                            data-count="none" class=
-                            "twitter-share-button" href=
-                            "https://twitter.com/share">ツイート</a>
-                          </div>
-                          <div class="social-btn facebook">
+                        <div class=
+                        "share-btns u-d-flex u-flex-1 u-align-items-center u-justify-content-start u-px-200 u-py-400">
+                          <a data-url=
+                          "https://booth.pm/ja/items/1294471"
+                          data-lang="ja" data-hashtags="booth_pm"
+                          data-text=
+                          "【無料配布】1st EP [Mandara] | SIGMAΣSTORE"
+                          data-count="none" class=
+                          "twitter-share-button" href=
+                          "https://twitter.com/share">ツイート</a>
+                          <div class="u-ml-300">
                             <div class="fb-like" data-action="like"
                             data-href=
                             "https://booth.pm/ja/items/1294471"
@@ -369,7 +368,7 @@
                         </div>
                       </section>
                     </div>
-                    <div class="flex-order-body">
+                    <div class="u-order-0 l-col-3of5 u-pr-500">
                       <div class="primary-image-area">
                         <div>
                           <div class=
@@ -401,7 +400,8 @@
                         </div></a>
                       </div>
                       <section>
-                        <div class="player" data-src=
+                        <div class="player u-my-300 u-bg-400"
+                        data-src=
                         "https://s2.booth.pm/5e3bdf99-d507-4e33-adb3-7284dd34cb3f/s/1294471/full/cfe3cb8d-c0ac-4868-a896-4425bd605f28.mp3">
                           <div class="player_control">
                             <div class="icon-play"></div>
@@ -431,7 +431,7 @@
                       </section>
                       <section>
                         <div class=
-                        "market-item-detail-description">
+                        "js-market-item-detail-description">
                           <table class="tracks">
                             <tr>
                               <td class="track-number">
@@ -470,7 +470,7 @@
                               </td>
                             </tr>
                           </table>
-                          <p class="autolink">
+                          <p class="autolink u-text-wrap">
                             バーチャルハンドパン奏者SIGMAΣによる1st
                             EP。三千世界を覗き見て描いたインプロヴァイズ楽曲を4曲収録。 トラックリスト
                             1.Gravitys 2.Dimension 3.Devastate
@@ -482,8 +482,7 @@
                         </div>
                       </section>
                       <section>
-                        <div class=
-                        "market-item-detail-module page_design" id=
+                        <div class="u-text-wrap page_design" id=
                         "modules"></div>
                       </section>
                     </div>
